--- a/production.ini
+++ b/production.ini
@@ -23,7 +23,7 @@ handle_exceptions =
 assembl_handle_exceptions = true
 
 # Ensure to have the same url scheme as Assembl and Sentry's (http or https)
-# raven_url = http://<raven_client_key>@sentry.coeus.ca/<raven_id#>
+raven_url = http://%(sentry_key)s@%(sentry_host)s/%(sentry_id)s
 
 tm.attempts=3
 
@@ -41,29 +41,21 @@ pyramid.default_locale_name = en_CA
 # Should requirejs defeat browser caching?  Useful in development
 requirejs.cache_bust = false
 
-sqlalchemy.url = postgresql+psycopg2://assembl:assembl@localhost/assembl?sslmode=disable
-# Unnessary to set this true in development, as logger_sqlalchemy DEBUG 
+sqlalchemy.url = postgresql+psycopg2://%(db_user)s:%(db_password)s@%(db_host)s/%(db_database)s?sslmode=disable
+# Unnessary to set this true in development, as logger_sqlalchemy DEBUG
 # below will also output sql statements
 sqlalchemy.echo = False
 sqlalchemy.strategy = atexit_cleanup
-db_user = assembl
-db_password = assembl
-db_schema = public
-db_database = assembl
-# db_host = localhost
 
 # Do we use elastic_search indexing
 use_elasticsearch = true
 
 jinja2.directories = assembl:templates
 
-#WHAT IS THIS USED FOR?
-assembl.domain = assembl.net
-
 #If false, every user will be immediately validated
 assembl.validate_registration_emails = true
-mail.host = localhost
-assembl.admin_email = webmaster@assembl.net
+mail.host = %(smtp_host)s
+assembl.admin_email = assembl@%(public_hostname)s
 
 # Set a discussion slug here so root redirects to a that discussion.
 # TODO: Replace with a host router.
@@ -107,6 +99,7 @@ SOCIAL_AUTH_AUTHENTICATION_BACKENDS = assembl.auth.wordpress.WordPressServerOAut
     social.backends.google.GoogleOpenId
     social.backends.google.GoogleOAuth2
     social.backends.google.GoogleOAuth
+    social.backends.yammer.YammerOAuth2
     social.backends.yahoo.YahooOpenId
     social.backends.stripe.StripeOAuth2
     social.backends.persona.PersonaAuth
@@ -167,7 +160,7 @@ SOCIAL_AUTH_FACEBOOK_SCOPE = public_profile
 # facebook.consumer_key =
 # facebook.consumer_secret =
 # facebook.app_access_token =
-# facebook.export_permissions = public_profile, email, publish_actions, user_posts, user_likes, manage_pages, publish_pages, user_groups, user_managed_groups
+facebook.export_permissions = public_profile, email, publish_actions, user_posts, user_likes, manage_pages, publish_pages, user_groups, user_managed_groups
 # facebook.debug_mode = false
 # facebook.api_version =
 supported_exports_list =
@@ -213,7 +206,7 @@ avatar.gravatar_default = mm
 
 # Beaker settings
 beaker.session.type = ext:memcached
-beaker.session.url = 127.0.0.1:11211
+beaker.session.url = %(memcached_host)s:11211
 beaker.session.data_dir = %(here)s/var/sessions/data
 beaker.session.lock_dir = %(here)s/var/sessions/lock
 beaker.session.key = assembl_session
@@ -299,7 +292,7 @@ celery_tasks.source_reader.imodeleventwatcher = assembl.tasks.notification_dispa
 # /0 - /3: reserved for development
 # /4: reserved for automated testing
 # /5 - /12: production
-celery_tasks.broker = redis://localhost:6379/5
+celery_tasks.broker = redis://%(redis_host)s:6379/%(redis_socket)s
 celery_tasks.imap.num_workers = 1
 celery_tasks.notification_dispatch.num_workers = 1
 celery_tasks.notify.num_workers = 2
@@ -358,18 +351,18 @@ web_analytics_piwik_script = <!-- Piwik -->
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//stats.bluenove.com/";
+        var u="//%(piwik_host)s/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', %d]);
+        _paq.push(['setSiteId', %%d]);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//stats.bluenove.com/piwik.php?idsite=%d" style="border:0;" alt="" /></p></noscript>
+    <noscript><p><img src="//%(piwik_host)s/piwik.php?idsite=%%d" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
 
 # URL of your Piwik server. For example: https://stats.bluenove.com . This token is required when the automatic discussion creation process is run.
-web_analytics_piwik_url = 
+web_analytics_piwik_url = https://%(piwik_host)s
 # API token of a Piwik Super User. This token is required when the automatic discussion creation process is run: a Piwik user and website are created and associated to the discussion.
 # For more information, see http://developer.piwik.org/api-reference/reporting-api#authenticate-to-the-api-via-token_auth-parameter
 web_analytics_piwik_api_token = 
@@ -391,7 +384,7 @@ transaction = transaction
 [alembic]
 # Path to migration scripts
 script_location = assembl/alembic
-sqlalchemy.url = postgresql+psycopg2://assembl:assembl@localhost/assembl?sslmode=disable
+sqlalchemy.url = postgresql+psycopg2://%(db_user)s:%(db_password)s@%(db_host)s/%(db_database)s?sslmode=disable
 transaction_per_migration = true
 
 # Template used to generate migration files
@@ -413,6 +406,7 @@ host = 0.0.0.0
 # 6546 thru 6547: reserved for automated testing
 # 6548-: production
 port = 6548
+threads = 10
 
 # Begin logging configuration
 
@@ -462,7 +456,7 @@ formatter = generic
 
 [handler_sentry]
 class = raven.handlers.logging.SentryHandler
-args = ('<raven client key url>',)
+args = ('http://%(sentry_key)s:%(sentry_secret)s@%(sentry_host)s/%(sentry_id)s',)
 level = WARNING
 formatter = generic
 
@@ -474,13 +468,12 @@ format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
 
 [filter:raven]
 use = egg:raven#raven
-dsn = <sentry client key url>
+dsn = http://%(sentry_key)s:%(sentry_secret)s@%(sentry_host)s/%(sentry_id)s
 include_paths = assembl
 exclude_paths = 
 
 [supervisor]
 
-autostart_virtuoso = true
 autostart_celery_imap = true
 autostart_celery_notification_dispatch = true
 autostart_celery_notify = true
@@ -496,35 +489,6 @@ autostart_uwsgi = false
 autostart_metrics_server = false
 autostart_metrics_server = false
 autostart_edgesense_server = false
-
-[virtuoso]
-# The path can be absolute, or relative to the project root
-virtuoso_src = src/virtuoso
-# If virtuoso_root = system, whatever version is installed by the OS will be used
-virtuoso_root = virtuoso
-# A commit can be put here instead of a branch
-
-# Last known good version with the new memory manager, 2015-02-20
-virtuoso_branch = 0a891c62cf419110a0ce167f68ce5a35eacc5de3
-#virtuoso_branch = develop/7
-
-
-# The ODBC port.  Standard virtuoso port is 5132
-# UNIQUE_PER_SERVER
-# Convention:
-# 5132 thru 5134: reserved for development
-# 5135 thru 5136: reserved for automated testing
-# 5137-: production
-port = 5137
-
-# The admin interface.  Standard virtuoso port is 8892
-# UNIQUE_PER_SERVER
-# Convention:
-# 8892 thru 8894: reserved for development
-# 8895 thru 8896: reserved for automated testing
-# 8897-: production
-http_port = 8897
-
 
 [uwsgi]
 # Set this dangerous umask if uwsgi is not the same user as nginx. Alternately, use proper uid/gid and run as root.
