--- a/production.ini
+++ b/production.ini
@@ -1,10 +1,7 @@
 [pipeline:main]
 pipeline =
+    raven
     assembl
-
-# Or, if you user Raven
-#   raven
-#   assembl
 
 [app:assembl]
 use = egg:assembl
@@ -23,7 +20,7 @@ handle_exceptions =
 assembl_handle_exceptions = true
 
 # Ensure to have the same url scheme as Assembl and Sentry's (http or https)
-raven_url = http://%(sentry_key)s@%(sentry_host)s/%(sentry_id)s
+raven_url = %(sentry_scheme)s://%(sentry_key)s@%(sentry_host)s/%(sentry_id)s
 
 tm.attempts=3
 
@@ -55,6 +52,7 @@ jinja2.directories = assembl:templates
 #If false, every user will be immediately validated
 assembl.validate_registration_emails = true
 mail.host = %(smtp_host)s
+mail.tls = true
 assembl.admin_email = assembl@%(public_hostname)s
 
 # Set a discussion slug here so root redirects to a that discussion.
@@ -90,7 +88,7 @@ USE_UNIQUE_USER_ID=True
 IGNORE_DEFAULT_SCOPE = True
 SOCIAL_AUTH_FACEBOOK_SCOPE = public_profile
     email
-SOCIAL_AUTH_GOOGLE_OAUTH2_SCOPE = profile
+SOCIAL_AUTH_GOOGLE_OAUTH2_SCOPE = profile email
 SOCIAL_AUTH_GITHUB_SCOPE = repo
 
 SOCIAL_AUTH_AUTHENTICATION_BACKENDS = assembl.auth.wordpress.WordPressServerOAuth2
@@ -146,7 +144,10 @@ login_providers =
 
 # Users from these providers (if enabled in login_providers) will not need
 # to verify their email
-trusted_login_providers = facebook google-oauth2 twitter
+trusted_login_providers = facebook
+ google-oauth2
+ twitter
+ saml
 
 # https://developers.facebook.com/docs/facebook-login/getting-started-web/
 # https://developers.facebook.com/apps/
@@ -161,7 +162,7 @@ SOCIAL_AUTH_FACEBOOK_SCOPE = public_profile
 # facebook.consumer_secret =
 # facebook.app_access_token =
 facebook.export_permissions = public_profile, email, publish_actions, user_posts, user_likes, manage_pages, publish_pages, user_groups, user_managed_groups
-# facebook.debug_mode = false
+facebook.debug_mode = false
 # facebook.api_version =
 supported_exports_list =
 
@@ -180,13 +181,12 @@ SOCIAL_AUTH_GITHUB_SCOPE = repo
 # API & auth; APIs; Google+ API: Activate
 SOCIAL_AUTH_GOOGLE_OAUTH2_KEY = ...
 SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET = ...
-SOCIAL_AUTH_GOOGLE_OAUTH2_SCOPE = https://www.googleapis.com/auth/userinfo.email
-    https://www.googleapis.com/auth/userinfo.profile
 
 # Based on https://wp-oauth.com/
 SOCIAL_AUTH_WORDPRESS_OAUTH2_KEY = ....
 SOCIAL_AUTH_WORDPRESS_OAUTH2_SECRET = ....
 
+SOCIAL_AUTH_SAML_SP_ENTITY_ID = http://saml.%(public_hostname)s
 
 # Absolute url of image to show for users that do not have an avatar.
 # If not present, assembl default will be used.
@@ -215,6 +215,9 @@ beaker.session.cookie_expires = false
 beaker.session.cookie_on_exception = true
 #security.hash_algorithm = sha256
 security.email_token_salt = CHANGEME_enter_a_salt
+beaker.session.session_class = beaker.upgradable_session.UpgradableSession
+beaker.session.cookie_expires = true
+beaker.session.elevated_expires = 2635200
 
 # Anykeystore settings for Velruse
 store = sqlalchemy
@@ -233,8 +236,8 @@ public_port = 80
 
 # Do we accept https? If so we'll force it in some cases.
 accept_secure_connection = true
-# Do we force https? (TODO)
-require_secure_connection = false
+# Do we force https?
+require_secure_connection = true
 
 # ZMQ Websockets are used for frontend to backend communication
 
@@ -292,6 +295,7 @@ celery_tasks.source_reader.imodeleventwatcher = assembl.tasks.notification_dispa
 # /0 - /3: reserved for development
 # /4: reserved for automated testing
 # /5 - /12: production
+redis_socket = 5
 celery_tasks.broker = redis://%(redis_host)s:6379/%(redis_socket)s
 celery_tasks.imap.num_workers = 1
 celery_tasks.notification_dispatch.num_workers = 1
@@ -414,8 +418,7 @@ threads = 10
 keys = root, assembl, sqlalchemy, alembic, sentry
 
 [handlers]
-keys = console
-#keys = console, sentry
+keys = console, sentry
 
 [formatters]
 keys = generic
@@ -456,7 +459,7 @@ formatter = generic
 
 [handler_sentry]
 class = raven.handlers.logging.SentryHandler
-args = ('http://%(sentry_key)s:%(sentry_secret)s@%(sentry_host)s/%(sentry_id)s',)
+args = ('%(sentry_scheme)s://%(sentry_key)s:%(sentry_secret)s@%(sentry_host)s/%(sentry_id)s',)
 level = WARNING
 formatter = generic
 
@@ -468,7 +471,7 @@ format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
 
 [filter:raven]
 use = egg:raven#raven
-dsn = http://%(sentry_key)s:%(sentry_secret)s@%(sentry_host)s/%(sentry_id)s
+dsn = %(sentry_scheme)s://%(sentry_key)s:%(sentry_secret)s@%(sentry_host)s/%(sentry_id)s
 include_paths = assembl
 exclude_paths = 
 
