--- a/develop_overlay.ini
+++ b/develop_overlay.ini
@@ -1,3 +1,7 @@
+[pipeline:main]
+pipeline =
+    assembl
+
 [app:assembl]
 pyramid.reload_templates = true
 pyramid.debug_all = true
@@ -24,6 +28,8 @@ mail.host = localhost
 login_providers = facebook twitter google-oauth2
 facebook.debug_mode = true
 accept_secure_connection = false
+require_secure_connection = false
+redis_socket = 0
 changes.websocket.port = 8085
 changes.websocket.proxied = false
 celery_tasks.notify.num_workers = 1
@@ -31,6 +37,9 @@ celery_tasks.translate.num_workers = 1
 cache_viewdefs = false
 activate_tour = true
 webpack_port = 8080
+
+[handlers]
+keys = console
 
 [logger_root]
 level = INFO
