More config updates

--- a/develop_overlay.ini
+++ b/develop_overlay.ini
@@ -43,12 +43,18 @@ keys = console
 
 [logger_root]
 level = INFO
+handlers = console
 
 [logger_assembl]
 level = DEBUG
+handlers = console
 
 [logger_sqlalchemy]
 level = DEBUG
+handlers = console
+
+[logger_alembic]
+handlers = console
 
 [supervisor]
 autostart_celery_notify = false
