--- a/production.ini
+++ b/production.ini
@@ -215,9 +215,11 @@ beaker.session.cookie_expires = false
 beaker.session.cookie_on_exception = true
 #security.hash_algorithm = sha256
 security.email_token_salt = CHANGEME_enter_a_salt
-beaker.session.session_class = beaker.upgradable_session.UpgradableSession
+beaker.session.session_class = assembl.auth.upgradable_session.AssemblUpgradableSession
 beaker.session.cookie_expires = true
 beaker.session.elevated_expires = 2635200
+
+new_frontend = true
 
 # Anykeystore settings for Velruse
 store = sqlalchemy
@@ -425,24 +427,24 @@ keys = generic
 
 [logger_root]
 level = WARN
-handlers = console
+handlers = console, sentry
 
 [logger_assembl]
 level = WARN
-handlers =
+handlers = console, sentry
 qualname = assembl
 
 [logger_sqlalchemy]
 level = WARN
-handlers =
+handlers = console, sentry
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
 
 [logger_alembic]
-level = INFO
-handlers =
+level = WARN
+handlers = console, sentry
 qualname = alembic
 
 [logger_sentry]
