--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
-FROM    ubuntu:16.04
+#FROM    ubuntu:16.04
+FROM    debian:jessie
 
 ENV     DEBIAN_FRONTEND noninteractive
 ARG	GITREPO=https://github.com/assembl/assembl.git
-ARG	GITBRANCH=master
+ARG	GITBRANCH=composite_ini
 
 RUN     apt-get update && apt-get install -y \
             fabric \
@@ -12,7 +13,6 @@ RUN     apt-get update && apt-get install -y \
             sudo \
             net-tools \
             monit \
-            nginx \
             uwsgi \
             uwsgi-plugin-python
 RUN     ssh-keygen -P '' -f ~/.ssh/id_rsa && \
@@ -21,34 +21,29 @@ RUN     cd /opt ; set -x ; git clone -b $GITBRANCH $GITREPO
 WORKDIR /opt/assembl
 RUN     /etc/init.d/ssh start && \
            ssh-keyscan localhost && \
-           cp production.ini local.ini && \
-           sed -i 's/accept_secure_connection = true/accept_secure_connection = false/' local.ini && \
-           fab devenv install_single_server && \
-           cp docker/nginx_config_docker/default /etc/nginx/sites-enabled/ && \
+           fab -c configs/docker.rc install_assembl_server_deps && \
            /etc/init.d/ssh stop
 RUN     /etc/init.d/ssh start && \
            ssh-keyscan localhost && \
-           fab devenv  build_virtualenv && \
-           fab devenv update_pip_requirements && \
+           fab -c configs/docker.rc build_virtualenv && \
+           fab -c configs/docker.rc app_update_dependencies && \
+           fab -c configs/docker.rc app_compile_nodbupdate && \
+           fab -c configs/docker.rc set_file_permissions && \
            /etc/init.d/ssh stop
-RUN     /etc/init.d/ssh start && \
-           ssh-keyscan localhost && \
-           /etc/init.d/postgresql start && \
-           /etc/init.d/redis-server start && \
-           fab devenv bootstrap_from_checkout && \
-           fab devenv set_file_permissions && \
-           . venv/bin/activate && \
-           assembl-add-user --email root@localhost --name "Admin" --username admin --password admin local.ini && \
-           supervisorctl shutdown && \
-           /etc/init.d/postgresql stop && \
-           /etc/init.d/redis-server stop && \
-           /etc/init.d/ssh stop
+# RUN     /etc/init.d/ssh start && \
+#            ssh-keyscan localhost && \
+#            /etc/init.d/postgresql start && \
+#            /etc/init.d/redis-server start && \
+#            fab -c configs/docker.rc bootstrap_from_checkout && \
+#            fab -c configs/docker.rc set_file_permissions && \
+#            . venv/bin/activate && \
+#            assembl-add-user --email root@localhost --name "Admin" --username admin --password admin local.ini && \
+#            supervisorctl shutdown && \
+#            /etc/init.d/postgresql stop && \
+#            /etc/init.d/redis-server stop && \
+#            /etc/init.d/ssh stop
 EXPOSE 80
 CMD     /etc/init.d/ssh start && \
-        /etc/init.d/redis-server start && \
-        /etc/init.d/memcached start && \
-        /etc/init.d/postgresql start && \
-        /etc/init.d/nginx start && \
         . venv/bin/activate && \
         supervisord && \
         supervisorctl start prod: && \
