more docker experiments

--- a/configs/base_env.rc
+++ b/configs/base_env.rc
@@ -5,8 +5,8 @@ ini_files = production.ini RANDOM RC_DATA
 *db_password = assembl
 *db_database = assembl
 db_schema = public
-postgres_db_user = postgres
-postgres_db_password =
+_postgres_db_user = postgres
+_postgres_db_password =
 smtp_host = localhost
 imap_host = localhost
 piwik_host = localhost
@@ -61,7 +61,6 @@ uses_global_supervisor = true
 uses_apache = false
 mac = false
 is_production_env = true
-_postgres_db_user = postgres
 _uses_apache = false
 _uses_global_supervisor = true
 _uses_memcache = true
