--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,7 +15,10 @@ services:
       memlock:
         soft: -1
         hard: -1
-    mem_limit: 1g
+    deploy:
+      resources:
+        limits:
+          memory: 1g
     ports:
       - 9200:9200
 
