Docker first-start, wip

--- a/configs/base_env.rc
+++ b/configs/base_env.rc
@@ -97,3 +97,4 @@ supervisor__autostart_uwsgi = false
 supervisor__autostart_metrics_server = false
 supervisor__autostart_metrics_server = false
 supervisor__autostart_edgesense_server = false
+supervisor__autostart_elasticsearch = true
