--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -68,9 +68,10 @@ services:
       DOCKER_RC: /var/docker_data/assembl1.rc
       BUILDING_DOCKER: "false"
     depends_on:
-      - redis
-      - memcached
       - database
+      - memcached
+      - redis
+      - elasticsearch
     command: sh -c 'cd /opt/assembl; /etc/init.d/ssh start ; . venv/bin/activate ; env BUILDING_DOCKER=false fab -c /var/docker_data/assembl1.rc docker_startup ; tail -f /dev/null'
     networks:
       - my_net
