name database volumes

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,6 +5,8 @@ networks:
 
 volumes:
   assembl_static:
+  pgdata:
+  redisdata:
 
 services:
   elasticsearch:
@@ -27,6 +29,8 @@ services:
 
   redis:
     image: redis:3.0-alpine
+    volumes:
+      - redisdata:/data
     networks:
       - my_net
 
@@ -37,6 +41,8 @@ services:
 
   database:
     image: postgres:9.5.5-alpine
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     networks:
       - my_net
 
