--- a/production.ini
+++ b/production.ini
@@ -498,7 +498,8 @@ autostart_edgesense_server = false
 [uwsgi]
 # Set this dangerous umask if uwsgi is not the same user as nginx. Alternately, use proper uid/gid and run as root.
 #umask = 000
-uid = www-data
+umask = 007
+uid = %U
 gid = www-data
 master = 1
 processes = 8
